--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,8 +7,8 @@ $transition-duration: 0.5s;
 
 body {
   font-family: Arial, sans-serif;
-  font-size: 300px;
-  font-weight: 100;
+  font-size: 16px;
+  font-weight: 400;
   color: #000;
   margin: 0;
   display: flex;
@@ -25,25 +25,27 @@ body {
   width: calc(($day-size + $day-gap) * 7 - $day-gap);
 
   &__day {
-    width: $day-size;
-    height: $day-size;
-    background-color: $day-default-color;
-    border: 1px solid $calendar-border-color;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: Arial, sans-serif;
-    font-size: 30px;
-    font-weight: bold;
-    color: #000;
-    cursor: pointer;
-    transition:
-      transform $transition-duration,
-      background-color $transition-duration;
+      position: relative;
+      width: $day-size;
+      height: $day-size;
+      background-color: $day-default-color;
+      border: 1px solid $calendar-border-color;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+      transition: transform $transition-duration, background-color $transition-duration;
+
+      &::before {
+        position: absolute;
+        font-size: 30px;
+        font-weight: bold;
+        color: #000;
+      }
 
     &:hover {
       background-color: $day-hover-color;
-      transform: translateY(-10px);
+      transform: translateY(-20px);
     }
   }
 
@@ -57,11 +59,9 @@ body {
     }
   }
 
-  @for $i from 28 through 31 {
-    &--month-length-#{$i} {
-      .calendar__day:nth-child(n + #{$i + 1}) {
-        display: none;
-      }
+  @for $i from 1 through 31 {
+    .calendar__day:nth-child(#{$i})::before {
+      content: "#{$i}";
     }
   }
 }
