--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,73 @@
+$cell-width: 100px;
+$cell-height: 100px;
+$start-day: (
+  'mon': 0,
+  'tue': 1,
+  'wed': 2,
+  'thu': 3,
+  'fri': 4,
+  'sat': 5,
+  'sun': 6,
+);
+$day-gap: 1px;
+$columns: 7;
+$width-calendar: (($cell-width + $day-gap) * $columns) - $day-gap;
+
 body {
   margin: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  width: $width-calendar;
+  gap: $day-gap;
+
+  &__day {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #eee;
+    border: 1px solid #000;
+    height: $cell-height;
+    width: $cell-width;
+    transition-duration: 0.5s;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+  }
+
+  &__day:hover {
+    cursor: pointer;
+    background-color: #ffbfcb;
+    transform: translateY(-20px);
+  }
+
+  @for $numberday from 1 through 31 {
+    &__day:nth-child(n + #{$numberday})::before {
+      content: '#{$numberday}';
+      font-family: Arial, sans-serif;
+      font-size: 30px;
+    }
+  }
+
+  @each $day, $number in $start-day {
+    &--start-day-#{$day} {
+      .calendar__day:first-of-type {
+        margin-left: $number * ($cell-width + $day-gap);
+      }
+    }
+  }
+
+  @for $numbers from 28 through 31 {
+    &--month-length-#{$numbers} {
+      .calendar__day:nth-child(n + #{$numbers + 1}) {
+        display: none;
+      }
+    }
+  }
 }
