--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,3 @@
-@import './body.scss';
-@import './calendar.scss';
-@import './variables.scss';
+@use './body.scss' as *;
+@use './calendar.scss' as *;
+@use './variables.scss' as *;
