--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -49,11 +49,9 @@
     'sun': 6,
   );
 
-  @each $day, $margin in $week {
-    .calendar--start-day-#{$day} {
-      .calendar__day:first-child {
-        margin-left: $margin;
-      }
+  @each $day, $offset in $week {
+    &--start-day-#{$day} .calendar__day:first-child {
+      margin-left: calc($offset * ($day-size + $day-gap));
     }
   }
 
