--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -46,4 +46,10 @@
 
         }
     }
+
+    @for $length from 28 through 31 {
+        &__month-length--#{$length}> :nth-child(n + #{$length + 1}) {
+            display: none;
+        }
+    }
 }
