--- a/src/blocks/page.scss
+++ b/src/blocks/page.scss
@@ -1,6 +1,15 @@
 .page {
-  margin: 0;
-  padding: $calendar-padding;
+  padding: 0;
+
+  // padding: $calendar-padding;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
+}
+
+.page__body {
+  margin: 0;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
