--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,3 +1,3 @@
-@import '../variables/variables.scss';
-@import '../blocks/page.scss';
-@import '../blocks/calendar.scss';
+@import '../variables/variables';
+@import '../blocks/page';
+@import '../blocks/calendar';
