add task solution

--- a/src/blocks/calendar.scss
+++ b/src/blocks/calendar.scss
@@ -24,9 +24,9 @@
     justify-content: center;
     align-items: center;
     box-sizing: border-box;
+    transition: all 500ms;
 
     &:hover {
-      transition: transform 500ms;
       background-color: #ffbfcb;
       transform: translate(0, -20px);
       cursor: pointer;
