made calendar padding

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,6 +1,6 @@
 .calendar {
   font-size: 30px;
-  $square-paddings: 10px;
+  padding: $square-paddings;
   display: flex;
   flex-wrap: wrap;
   gap: $square-spacing;
@@ -15,8 +15,8 @@
     cursor: pointer;
     border: 1px solid black;
     transition:
-      transform 500ms,
-      background-color 500ms;
+    transform 500ms,
+    background-color 500ms;
 
     &:hover {
       background-color: $background-color-hover;
