--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,4 +1,5 @@
 .calendar {
+  margin: 71.5px 149px;
   font-size: 30px;
   padding: $square-paddings;
   display: flex;
@@ -15,8 +16,8 @@
     cursor: pointer;
     border: 1px solid black;
     transition:
-    transform 500ms,
-    background-color 500ms;
+      transform 500ms,
+      background-color 500ms;
 
     &:hover {
       background-color: $background-color-hover;
