--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,71 @@
 body {
   margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+$day-size: 100px;
+$gap-size: 1px;
+$border-size: 1px;
+$hover-transform: -20px;
+$background-color: #eee;
+$hover-color: #ffbfcb;
+$border-color: #000;
+$text-color: #000;
+$font-size: 30px;
+$transition-time: 0.5s;
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: $gap-size;
+  width: calc(7 * ($day-size + 2 * $border-size) + 6 * $gap-size);
+  margin: 50px auto;
+
+  &__day {
+    width: $day-size;
+    height: $day-size;
+    background-color: $background-color;
+    border: $border-size solid $border-color;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    font-family: Arial, sans-serif;
+    font-size: $font-size;
+    color: $text-color;
+    user-select: none;
+    transition:
+      transform $transition-time,
+      background-color $transition-time;
+
+    &:hover {
+      background-color: $hover-color;
+      cursor: pointer;
+      transform: translateY($hover-transform);
+    }
+
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i})::before {
+        content: '#{$i}';
+      }
+    }
+  }
+
+  @each $day,
+    $margin in (mon: 0, tue: 1, wed: 2, thu: 3, fri: 4, sat: 5, sun: 6)
+  {
+    &--start-day--#{$day} &__day:first-child {
+      margin-left: calc($margin * ($day-size + $gap-size));
+    }
+  }
+
+  @for $days from 28 through 31 {
+    &--month-length--#{$days} &__day:nth-child(n + #{$days + 1}) {
+      display: none;
+    }
+  }
 }
