--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,52 +1,86 @@
-$daySize: 100px;
-$countDays: 31;
-$gapValue: 1px;
-$calendarWidth: $daySize * 7 + 10;
-$daysOfWeek: ('mon' 1, 'tue' 2, 'wed' 3, 'thu' 4, 'fri' 5, 'sat' 6, 'sun' 7);
-$startDay: 'sun';
+$day-size: 100px;
+$month-length: 31;
+$day-border: 1px solid #000;
+$day-font-size: 30px;
+$day-color: #eee;
+$day-hover-color: #ffbfcd;
+$day-hover-transform: translateY(-20px);
+$day-transition: all 0.5s ease;
+$calendar-width: calc(7 * $day-size + 10px);
+$days: (
+  'mon': 0,
+  'tue': 1,
+  'wed': 2,
+  'thu': 3,
+  'fri': 4,
+  'sat': 5,
+  'sun': 6,
+);
 
 body {
+  margin: 0;
+}
+
+.body {
   display: flex;
   justify-content: center;
-  margin-top: 82px;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
+  align-items: center;
 }
 
 .calendar {
   display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
   flex-wrap: wrap;
-  padding-inline: 10px;
-  gap: $gapValue;
-  max-width: $calendarWidth;
+  width: $calendar-width;
+  margin: 10px;
+  border-collapse: collapse;
+  gap: 1px;
 }
 
 .calendar__day {
   display: flex;
-  box-sizing: border-box;
   justify-content: center;
   align-items: center;
-  background-color: #eee;
-  border: 1px solid black;
-  height: $daySize;
-  width: $daySize;
+  background-color: $day-color;
+  font-family: Arial, sans-serif;
+  border: $day-border;
+  height: $day-size;
+  width: $day-size;
+  box-sizing: border-box;
+  font-size: $day-font-size;
+  transition: $day-transition;
 }
 
 .calendar__day:hover {
   cursor: pointer;
-  background-color: #ffbfcb;
-  transition-duration: 0.5s;
-  transform: translateY(-20px);
+  background-color: $day-hover-color;
+  transform: $day-hover-transform;
 }
 
-@for $dayNumber from 1 through 31 {
-  .calendar__day:nth-child(#{$dayNumber})::before {
-    content: '#{$dayNumber}';
+.calendar__day::before {
+  content: attr(data-day);
+}
+
+.calendar__day:nth-child(7n + 1) {
+  margin-left: 0;
+}
+
+@for $i from 1 through $month-length {
+  .calendar__day:nth-child(#{$i})::before {
+    content: '#{$i}';
   }
 }
 
-@for $i from 28 through 31 {
-  .calendar--month-length-#{$i} :nth-child(n + #{$i + 1}) {
+@for $i from 28 through $month-length {
+  .calendar--moth-length-#{$i}.calendar__day:nth-child(n + #{$i + 1}) {
     display: none;
+  }
+}
+
+@each $day, $i in $days {
+  .calendar--start-day-#{$day} > .calendar__day:first-child {
+    margin-left: ($day-size + 1px) * $i;
   }
 }
