--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -25,15 +25,14 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100vh;
 }
 
 .calendar {
   display: flex;
-  justify-content: center;
   align-items: center;
-  height: 100vh;
   flex-wrap: wrap;
-  width: $calendar-width;
+  width: 706px;
   margin: 10px;
   border-collapse: collapse;
   gap: 1px;
