--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,62 @@
+@import './variables';
+
 body {
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  height: 100vh;
+}
+
+h1 {
+  display: none;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  counter-reset: day;
+  width: 707px;
+  gap: 1px;
+
+  @each $day, $index in (sun: 6, mon: 0, tue: 1, wed: 2, thu: 3, fri: 4, sat: 5)
+  {
+    &--start-#{$day} .calendar__day:first-child {
+      margin-left: calc(#{$index} * (#{100px} + #{1px}));
+    }
+  }
+
+  @for $length from 28 through 31 {
+    &--month-length-#{$length} .calendar__day:nth-child(n + #{$length + 1}) {
+      display: none;
+    }
+  }
+}
+
+.calendar__day {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: $cell-size;
+  height: $cell-size;
+  border: 1px solid black;
+  background-color: $base-color;
+  cursor: pointer;
+  transition:
+    background-color $transition-duration,
+    transform $transition-duration;
+
+  &::before {
+    content: counter(day);
+    counter-increment: day;
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+    color: black;
+  }
+
+  &:hover {
+    background-color: $hover-color;
+    transform: translateY($hover-offset);
+  }
 }
