--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,7 +14,7 @@ body {
 .calendar {
   padding: 10px;
   gap: 1px;
-  width: 7 * $day-size + 6px;
+  width: 7 * $day-size + 6 * $gap;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
