--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -62,13 +62,13 @@ $days: (
 );
 
 @each $day, $number in $days {
-  .calendar--start-day-#{$day}:first-child {
+  .calendar--start-day-#{$day} .calendar__day:first-child {
     margin-left: #{(($block + $gap) * $number)};
   }
 }
 
 @for $number from 28 through 31 {
-  .calendar--month-length-31#{$number}:nth-child(n + #{$number + 1}) {
+  .calendar--month-length-31 .calendar__day:nth-child(n + #{$number + 1}) {
     display: none;
   }
 }
