add task solution

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -73,7 +73,7 @@ body {
 }
 
 @for $i from 28 through $month-length {
-  .calendar--moth-length-#{$i}.calendar__day:nth-child(n + #{$i + 1}) {
+  .calendar--month-length-#{$i}.calendar__day:nth-child(n + #{$i + 1}) {
     display: none;
   }
 }
