--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,43 @@
+$numOfFirstDay: 1;
+$numOfLastDay: 31;
+$firstDay: 3;
+
 body {
   margin: 0;
+}
+
+.calendar {
+  margin: 10px;
+  width: 760px;
+
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1px;
+}
+
+.calendar__day {
+  // position: relative;
+
+  height: 100px;
+  width: 100px;
+  box-sizing: border-box;
+  border: 1 solid black;
+  background-color: #eee;
+
+}
+
+.calendar__day:first-child {
+  margin-left: 101px * ($firstDay - 1);
+}
+
+@for $i from $numOfFirstDay through $numOfLastDay {
+  .calendar :nth-child(n) {
+    .calendar__day::before {
+      line-height: 30px;
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 30px;
+      content: '#{$i}';
+      // position: fixed;
+    }
+  }
 }
