--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,18 @@
 body {
   margin: 0;
 }
+
+.calendar {
+  box-sizing: border-box;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+
+  &__day {
+    background-color: #eee;
+    height: 100px;
+    width: 100px;
+    border: 1px solid black;
+  }
+}
