--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,5 +14,12 @@ body {
     height: 100px;
     width: 100px;
     border: 1px solid black;
+
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i})::before {
+        content: '#{$i}';
+        font-size: 30px;
+      }
+    }
   }
 }
