--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,48 +1,4 @@
-$numOfFirstDay: 1;
-$numOfLastDay: 28;
-$startDay: 3;
-
-$calendarDayHeight: 100px;
-$calendarDayWidth: 100px;
-
-body {
-  margin: 0;
-}
-
-.calendar {
-  margin: 10px;
-  width: 760px;
-
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1px;
-}
-
-.calendar__day:first-child {
-  margin-left: 101px * ($startDay - 1);
-}
-
-
-@for $i from $numOfFirstDay through $numOfLastDay {
-  .calendar__day:nth-child(#{$i} of .calendar__day) {
-    position: relative;
-
-    height: $calendarDayHeight;
-    width: $calendarDayWidth;
-    box-sizing: border-box;
-    border: 1 solid black;
-    background-color: #eee;
-  }
-
-  .calendar__day:nth-child(#{$i} of .calendar__day)::before {
-    content: '#{$i}';
-    position: absolute;
-    height: $calendarDayHeight;
-    width: $calendarDayWidth;
-
-    text-align: center;
-    line-height: $calendarDayHeight;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 30px;
-  }
-}
+@use 'variables';
+@use 'body';
+@use 'start-day';
+@use 'month-lenght';
