--- a/src/styles/_body.scss
+++ b/src/styles/_body.scss
@@ -1,9 +1,10 @@
 body {
   margin: 0;
+  padding-top: 82px;
+  padding-left: 159px;
 }
 
 .calendar {
-  margin: 10px;
   width: 760px;
 
   display: flex;
