--- a/src/styles/_month-lenght.scss
+++ b/src/styles/_month-lenght.scss
@@ -23,11 +23,11 @@
       .calendar__day:nth-child(#{$i} of .calendar__day)::before {
         content: '#{$i}';
         position: absolute;
-        height: variables.$calendarDayHeight;
-        width: variables.$calendarDayWidth;
+        height: variables.$calendarDayHeight - 3;
+        width: variables.$calendarDayWidth - 2;
 
         text-align: center;
-        line-height: variables.$calendarDayHeight;
+        line-height: variables.$calendarDayHeight - 3;
         font-family: Arial, Helvetica, sans-serif;
         font-size: 30px;
       }
