--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,63 @@
+$day_size: 100px;
+$gap_size: 1px;
+$padding_size: 10px;
+$starting_days: (1 mon, 2 tue, 3 wed, 4 thu, 5 fri, 6 sat, 7 sun);
+
+* {
+  box-sizing: border-box;
+}
+
 body {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
   margin: 0;
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+  display: flex;
+}
+
+.calendar {
+  flex-wrap: wrap;
+  gap: $gap_size;
+  width: 7 * $day_size + 6 * $gap_size + 2 * $padding_size;
+  padding: $padding_size;
+  display: flex;
+
+  @each $day-num, $day-name in $starting_days {
+    &--start-day-#{$day-name} &__day:first-child {
+      margin-left: ($day-num - 1) * ($day_size + 1px);
+    }
+  }
+
+  @for $day from 28 through 31 {
+    &--month-length-#{$day} &__day:nth-child(n + #{$day + 1}) {
+      display: none;
+    }
+  }
+
+  &__day {
+    background-color: #eee;
+    border: 1px solid #000;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    transition-duration: 0.5s;
+
+    @for $day from 1 through 31 {
+      &:nth-child(#{$day}):before {
+        content: '#{$day}';
+      }
+    }
+
+    &:hover {
+      cursor: pointer;
+      background-color: #ffbfcb;
+      transition-duration: 0.5s;
+      transform: translateY(-20px);
+    }
+  }
 }
