--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -1,17 +1,34 @@
 @use 'variables';
 
+.calendar {
+  width: 706px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1px;
+}
+
+@each $day, $number in variables.$start-day {
+  .calendar--start-day-#{$day} {
+    .calendar__day:first-child {
+      margin-left: 101px * ($number - 1);
+    }
+  }
+}
+
 @each $number in variables.$month-length {
   .calendar--month-length-#{$number} {
     @for $i from 1 through $number {
       .calendar__day:nth-child(#{$i} of .calendar__day) {
-        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
         height: variables.$calendarDayHeight;
         width: variables.$calendarDayWidth;
         box-sizing: border-box;
         border: 1 solid black;
         background-color: #eee;
-        transition: all 0.5s;
+        transition: all 500ms;
 
         &:hover {
           cursor: pointer;
@@ -22,14 +39,7 @@
 
       .calendar__day:nth-child(#{$i} of .calendar__day)::before {
         content: '#{$i}';
-        position: absolute;
-        height: variables.$calendarDayHeight - 3;
-        width: variables.$calendarDayWidth - 2;
-
         text-align: center;
-        line-height: variables.$calendarDayHeight - 3;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 30px;
       }
     }
   }
