--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,72 @@
+$day-hight: 100px;
+$day-width: 100px;
+$gap: 1px;
+
 body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
   margin: 0;
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: $gap;
+  width: calc(($day-width * 7) + (6 * $gap));
+  padding: 10px;
+
+  $days: (
+    'mon': 0,
+    'tue': 1,
+    'wed': 2,
+    'thu': 3,
+    'fri': 4,
+    'sat': 5,
+    'sun': 6,
+  );
+
+  @each $day, $margin in $days {
+    &--start-day-#{$day} {
+      .calendar__day:first-child {
+        margin-left: $margin * ($day-width + $gap);
+      }
+    }
+  }
+}
+
+.calendar__day {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  background-color: #eee;
+  height: $day-hight;
+  width: $day-width;
+  border: 1px solid black;
+
+  @for $i from 1 through 31 {
+    &:nth-child(#{$i})::before {
+      content: '#{$i}';
+    }
+  }
+
+  &:hover {
+    background-color: #ffbfcb;
+    transform: translateY(-20px);
+    cursor: pointer;
+    transition-duration: 500ms;
+  }
+}
+
+@for $d from 28 through 31 {
+  .calendar--month-length-#{$d} {
+    .calendar__day:nth-child(n + #{$d + 1}) {
+      display: none;
+    }
+  }
 }
