--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,4 @@
-$day-hight: 100px;
+$day-height: 100px;
 $day-width: 100px;
 $gap: 1px;
 
@@ -45,7 +45,7 @@ body {
   align-items: center;
   box-sizing: border-box;
   background-color: #eee;
-  height: $day-hight;
+  height: $day-height;
   width: $day-width;
   border: 1px solid black;
 
