--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,81 @@
+$day-size: 100px;
+$border-size: 1px;
+$day-gap: 1px;
+$day-background: #eee;
+$hover-background: #ffbfcb;
+$font-size: 30px;
+$acent-color: #000;
+$col-count: 7;
+$days: (
+  mon: 0,
+  tue: 1,
+  wed: 2,
+  thu: 3,
+  fri: 4,
+  sat: 5,
+  sun: 6,
+);
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  padding: 10px;
+  gap: $day-gap;
+  width: 726px;
+
+  @each $day, $index in $days {
+    &--start-day-#{$day} &__day:nth-child(1) {
+      margin-left: calc(#{$index} * (#{$day-size} + 1px));
+    }
+  }
+
+  @for $days from 28 through 31 {
+    &--month-length-#{$days} &__day:nth-child(n + #{$days + 1}) {
+      display: none;
+    }
+  }
+
+  &__day {
+    box-sizing: border-box;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: $day-background;
+    border: solid $border-size #000;
+    width: $day-size;
+    height: $day-size;
+    cursor: pointer;
+    transition:
+      background-color 0.5s,
+      transform 0.5s;
+
+    @for $day from 1 through 31 {
+      &:nth-child(#{$day})::before {
+        content: '#{$day}';
+        font-family: Arial, sans-serif;
+        font-size: $font-size;
+        color: $acent-color;
+      }
+    }
+
+    &:hover {
+      background-color: $hover-background;
+      transform: translateY(-20px);
+    }
+  }
 }
