--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,12 @@
+html {
+  box-sizing: border-box;
+}
+
 body {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
   margin: 0;
+  display: flex;
 }
