--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -29,6 +29,7 @@
     &:hover {
       background-color: #ffbfcb;
       transform: translateY(-20px);
+      cursor: pointer;
     }
 
     @for $dayNumber from 1 through 31 {
