add task solution

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,7 +15,7 @@ $animation-duration: 0.5s;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  width: calc(7 * (#{$cell-size} + #{$border-size} * 2) + #{$gap} * 6 + #{$calendar-padding} * 2);
+  width: calc(7 * (#{$cell-size} + #{$border-size} * 2) + #{$gap} * 6 + #{$calendar-padding} * 2); // Виправлено: всі операції в одному рядку
   margin: auto;
   padding: $calendar-padding;
   gap: $gap;
@@ -60,7 +60,7 @@ $animation-duration: 0.5s;
 // Start-Day Modifier
 @each $day, $margin in (sun: 0, mon: 1, tue: 2, wed: 3, thu: 4, fri: 5, sat: 6) {
   .calendar--start-day-#{$day} .calendar__day:first-child {
-    margin-left: calc(#{$margin} * (#{$cell-size} + #{$gap} + #{$border-size} * 2));
+    margin-left: calc(#{$margin} * (#{$cell-size} + #{$gap} + #{$border-size} * 2)); // Виправлено: всі операції в одному рядку
   }
 }
 
