--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -48,3 +48,9 @@ $days: (
     margin-left: $margin;
   }
 }
+
+@for $da from 28 through 31 {
+  .calendar--month-length-#{$da} .calendar__day:nth-child(n + #{$da + 1}) {
+    visibility: hidden;
+  }
+}
