--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,56 @@
-body {
-  margin: 0;
+$day-size: 100px;
+$day-color: #eee;
+$day-hover-color: #ffbfcb;
+$border-color: #000;
+$font-color: #000;
+$transition-duration: 0.5s;
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: calc(7 * #{$day-size} + 6px);
+  margin: auto;
+  padding: 10px;
+  gap: 1px;
+  counter-reset: day;
+
+  &__day {
+    width: $day-size;
+    height: $day-size;
+    background-color: $day-color;
+    border: 1px solid $border-color;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    cursor: pointer;
+    transition:
+      transform $transition-duration,
+      background-color $transition-duration;
+
+    &::before {
+      content: counter(day);
+      counter-increment: day;
+      font-family: Arial, sans-serif;
+      font-size: 30px;
+      color: $font-color;
+    }
+
+    &:hover {
+      background-color: $day-hover-color;
+      transform: translateY(-20px);
+    }
+  }
+
+  &--start-day-mon .calendar__day:nth-child(1) {
+    margin-left: calc(2 * #{$day-size} + 2px);
+  }
+
+  &--month-length-28 .calendar__day:nth-child(n + 29),
+  &--month-length-29 .calendar__day:nth-child(n + 30),
+  &--month-length-30 .calendar__day:nth-child(n + 31) {
+    display: none;
+  }
 }
