--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,77 @@
+$block: 100px;
+$gap: 1px;
+$days: 31;
+$days: (
+  'mon': 0,
+  'tue': 1,
+  'wed': 2,
+  'thu': 3,
+  'fri': 4,
+  'sat': 5,
+  'sun': 6,
+);
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.calendar {
+  flex-wrap: wrap;
+  gap: $gap;
+  max-width: 726px;
+  padding: 0 10px;
+  display: flex;
+
+  &__day {
+    display: flex;
+    position: relative;
+    height: $block;
+    width: $block;
+    cursor: pointer;
+    border: 1px solid black;
+    background-color: #eee;
+    transition: background-color 0.5s transform 0.5s;
+
+    &:hover {
+      background-color: #ffbfcb;
+      transform: translateY(-5px);
+    }
+
+    &::before {
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 30px;
+      display: block;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      content: '';
+    }
+  }
+
+  @for $number from 1 through 31 {
+    & :nth-child(#{$number})::before {
+      content: '#{$number}';
+    }
+  }
+
+  @each $day, $number in $days {
+    &--start-day-#{$day} .calendar__day:first-child {
+      margin-left: #{(($block + $gap) * $number)};
+    }
+  }
+
+  @for $number from 28 through 31 {
+    &--month-length-#{$number} &__day:nth-child(n + #{$number + 1}) {
+      display: none;
+    }
+  }
 }
