--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,6 +14,7 @@ $transition-duration: 0.5s;
   margin: auto;
   padding: 10px;
   gap: 1px;
+
   counter-reset: day;
 
   &__day {
@@ -44,13 +45,16 @@ $transition-duration: 0.5s;
     }
   }
 
-  &--start-day-mon .calendar__day:nth-child(1) {
-    margin-left: calc(2 * #{$day-size} + 2px);
+  @for $i from 29 through 31 {
+    &--month-length-#{$i} &__day:nth-child(n + #{$i + 1}) {
+      display: none;
+    }
   }
 
-  &--month-length-28 .calendar__day:nth-child(n + 29),
-  &--month-length-29 .calendar__day:nth-child(n + 30),
-  &--month-length-30 .calendar__day:nth-child(n + 31) {
-    display: none;
+  @each $day, $index in (sun: 0, mon: 1, tue: 2, wed: 3, thu: 4, fri: 5, sat: 6)
+  {
+    &--start-day-#{$day} &__day:nth-child(1) {
+      margin-left: calc(#{$index} * #{$day-size} + #{$index}px);
+    }
   }
 }
