--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,83 @@
+// #region Variables
+
+$cell-size: 100px;
+$column-count: 7;
+$gap: 1px;
+$padding: 10px;
+$calendar-width: $column-count * ($cell-size + $gap) - $gap;
+$animation-duration: 0.5s;
+$days: (mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6);
+
+// #endregion
+
 body {
   margin: 0;
 }
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  width: $calendar-width;
+  padding: $padding;
+  gap: $gap;
+  position: absolute;
+  counter-reset: day 0;
+
+  &__day {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    background-color: #eee;
+    width: $cell-size;
+    height: $cell-size;
+    border: 1px solid black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    transition:
+      transform $animation-duration,
+      background-color $animation-duration;
+  }
+
+  &__day::before {
+    content: counter(day);
+    counter-increment: day;
+  }
+
+  &__day:hover {
+    background-color: #ffbfcb;
+    transform: translateY(-20px);
+    cursor: pointer;
+  }
+
+  //  #endregion
+}
+
+// #region Month Length Modifier
+
+@for $length from 28 through 31 {
+  .calendar--month-length-#{$length} {
+    .calendar__day:nth-child(n + #{$length + 1}) {
+      display: none;
+    }
+  }
+}
+
+// #endregion
+
+// #region Start Day Modifier
+
+@each $day, $offset in ($days) {
+  .calendar--start-day-#{$day} .calendar__day:first-child {
+    margin-left: calc(#{($cell-size + $gap) * $offset});
+  }
+}
+
+// #endregion
