--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,75 @@
+$cell-size: 100px;
+$border-width: 1px;
+$border-color: #000;
+$cell-background: #eee;
+$hover-background: #ffbfcb;
+$font-size: 30px;
+$animation-duration: 0.5s;
+$columns: 7;
+$gap: 1px;
+$padding: 10px;
+$days: (mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6);
+
 body {
   margin: 0;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: $gap;
+  width: calc(#{($cell-size + $gap)} * #{$columns} - #{$gap});
+  padding: $padding;
+  margin: auto;
+  position: absolute;
+  counter-reset: day 0;
+}
+
+.calendar__day {
+  width: $cell-size;
+  height: $cell-size;
+  background: $cell-background;
+  border: $border-width solid $border-color;
+  box-sizing: border-box;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: Arial, sans-serif;
+  font-size: $font-size;
+  cursor: pointer;
+  transition:
+    transform $animation-duration,
+    background-color $animation-duration;
+
+  &:hover {
+    background-color: $hover-background;
+    transform: translateY(-20px);
+  }
+
+  &::before {
+    content: counter(day);
+    counter-increment: day;
+  }
+}
+
+@for $length from 28 through 31 {
+  .calendar--month-length-#{$length} {
+    .calendar__day:nth-child(n + #{$length + 1}) {
+      display: none;
+    }
+  }
+}
+
+@each $day, $offset in ($days) {
+  .calendar--start-day-#{$day} .calendar__day:first-child {
+    margin-left: calc(#{($cell-size + $gap) * $offset});
+  }
 }
