--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,75 @@
+$cell-size: 100px;
+$columns: 7;
+$gap: 1px;
+$days: (
+  mon: 0,
+  tue: 1,
+  wed: 2,
+  thu: 3,
+  fri: 4,
+  sat: 5,
+  sun: 6,
+);
+
 body {
   margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1px;
+  margin: auto;
+  counter-reset: day;
+  padding: 10px;
+  width: calc((100px + 1px) * 7 - 1px);
+  position: relative;
+}
+
+.calendar__day {
+  width: 100px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #eee;
+  border: 1px solid #000;
+  font-size: 30px;
+  font-family: Arial, sans-serif;
+
+  cursor: pointer;
+  position: relative;
+  transition:
+    transform 0.5s,
+    background-color 0.5s;
+  box-sizing: border-box;
+
+  &:hover {
+    background-color: #ffbfcb;
+    transform: translateY(-20px);
+  }
+
+  &::before {
+    counter-increment: day;
+    content: counter(day);
+  }
+}
+
+@for $length from 28 through 31 {
+  .calendar--month-length-#{$length} {
+    .calendar__day:nth-child(n + #{$length + 1}) {
+      display: none;
+    }
+  }
+}
+
+@each $day, $offset in $days {
+  .calendar--start-day-#{$day} .calendar__day:first-child {
+    margin-left: calc((100px + 1px) * $offset);
+  }
 }
