--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,63 @@
+@use 'sass:list';
+
+$gap-width: 1px;
+$day-size: 100px;
+$number-of-columns: 7;
+$days-of-week: mon, tue, wed, thu, fri, sat, sun;
+
 body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin: 0;
+  height: 100vh;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 10px;
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  gap: $gap-width;
+  width: $day-size * $number-of-columns + $gap-width * ($number-of-columns - 1);
+
+  &__day {
+    width: $day-size;
+    height: $day-size;
+    background-color: #eee;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    border: 1px solid #000;
+    transition-duration: 0.5s;
+
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i})::before {
+        content: '#{$i}';
+      }
+    }
+
+    &:hover {
+      cursor: pointer;
+      background-color: #ffbfcb;
+      transition-duration: 0.5s;
+      transform: translateY(-20px);
+    }
+  }
+
+  @each $day in $days-of-week {
+    &--start-day-#{$day} > :first-child {
+      $i: list.index($days-of-week, $day) - 1;
+
+      margin-left: ($day-size + $gap-width) * $i;
+    }
+  }
+
+  @for $i from 28 through 31 {
+    &--month-length-#{$i} > :nth-child(n + #{$i + 1}) {
+      display: none;
+    }
+  }
 }
