--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -37,16 +37,17 @@ $daysInWeek: (
 
     @for $i from 1 to 32 {
       &--#{$i}::before {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         box-sizing: border-box;
         content: '#{$i}';
         position: relative;
         background-color: #eee;
         font-family: Arial, Helvetica, sans-serif;
         font-size: 30px;
-        text-align: center;
         width: 100%;
         height: 100%;
-        line-height: $side;
         transition: background-color 0.5s ease 0s;
       }
     }
